--- a/www/run.html
+++ b/www/run.html
@@ -405,9 +405,10 @@
 		</div>
 
     <div id="firma" class="row" style="display:none;">
-        <div class="embed-responsive embed-responsive-16by9">
+        <!--<div class="embed-responsive embed-responsive-16by9">
           <iframe id="framefirma" class="embed-responsive-item" src=""></iframe>
-        </div>
+        </div>-->
+        <input name="archivo" type="file" id="imagen" />
       <!--<div class="col-xs-4"></div>
         <div class="col-xs-4">
           <br><br>
