--- a/www/run.html
+++ b/www/run.html
@@ -585,7 +585,7 @@ function envia(donde){
 
 			 }else if(donde=='firma'){
               //alert(miidempresa);
-             document.getElementById('framefirma').src='http://practifactura.com/facturaelectronica/subpages/administrador/firmam.php?idemp='+miidempresa;
+             //document.getElementById('framefirma').src='http://practifactura.com/facturaelectronica/subpages/administrador/firmam.php?idemp='+miidempresa;
 
               $('#auxcloud').removeClass('active');
               $('#auxfacturar').removeClass('active');
