--- a/www/index.html
+++ b/www/index.html
@@ -10,10 +10,15 @@
     <script type="text/javascript" src="css/jquery.mobile-1.4.2.min.js"></script>
 	<script type="text/javascript" src="css/bootstrap.min.js"></script>
 	<script type="text/javascript" src="cordova.js"></script>
-    <script src="js/pdv.js"></script>
-	
+
 	</head>
-    <body style="background-color:#1970AA;">      
+    <body style="background-color:#1970AA;">
+<div id="fadeCloud" style="display:none;width:100%;height:100%;position:absolute;left:0px;top:0px;background:rgba(255,255,255,0.7);z-index:90000;">
+	<div style="height:50%">&nbsp;</div>
+		<div  style="text-align:center;" >
+		<img src="img/loading.gif"  />
+	</div>
+</div>
 	<br/>
 <div class="container-fluid">
 <div class="row">
@@ -72,6 +77,7 @@
 	}
 	// consulta los datos *****************
 	function registrarUser () {
+	$("#fadeCloud").show();
 	var email=$.trim($("#newEmail").val());
 	var pass=$.trim($("#newPass").val());
 	var confirm=$.trim($("#newConfirm").val());
@@ -90,20 +96,22 @@
 	alert ("El password es incorrecto. Confirme que el password sea el mismo  ");
 	return;
 	} 
-	if(fHayInternet()) {  
+	if(fHayInternet()) {
 		$.ajax({
   		method: "POST",
-  		url: "http://practifactura.com/registro/registro.php",
+  		url: "http://practifactura.com/registro/registroPractiFactura.php",
   		data: { email: email, pass: pass,empresa:empresa,nombre:nombre,celular:celular,pais:pais,versiones:versiones }
 		})
   		.done(function( msg ) {
 	    //alert( "Data Saved: " + msg );
-		if (msg=="si"){
-			location.href="run.html";
-		}else {
-			alert ("Usted ya tiene una cuenta.");
+        var res = msg.split("||");
+		if (res[0]=="existe"){
+			alert ("Usted ya tiene una cuenta \ncon este correo.");
+             $("#fadeCloud").hide();
+		}else{
+            setTimeout(function(){ location.href="run.html?id="+res[0]; }, 3000);
 		}
-		
+
 		console.log(msg);
   		});	
   		}else{
