--- a/www/run.html
+++ b/www/run.html
@@ -48,11 +48,17 @@
 					<ul class="nav navbar-nav">
 						<li id="auxfacturar" class="active" onclick="envia('factura')"><a href="javascript:void(0);"><span style='display:inline;' class='fa fa-line-chart'></span>&nbsp;Facturar<span class="sr-only">(current)</span></a></li>
 						<li id="auxhistorial" onclick="envia('historial')"><a href="javascript:void(0);"><span style='display:inline;' class='fa fa-shopping-cart'></span>&nbsp;Historial<span class="sr-only">(current)</span></a></li>
-						<li id="auxconfig" onclick="envia('configurar')"><a href="javascript:void(0);"><span style='display:inline;' class='fa fa-shopping-cart'></span>&nbsp;Configurar<span class="sr-only">(current)</span></a></li>
-                        <li id="auxfirma" onclick="envia('firma')"><a href="javascript:void(0);"><span style='display:inline;' class='glyphicon glyphicon-pencil'></span>&nbsp;Firma Electrónica<span class="sr-only">(current)</span></a></li>
-						 <li id="auxcloud" onclick="envia('cloud')"><a href="javascript:void(0);"><span style='display:inline;' class='glyphicon glyphicon-pencil'></span>&nbsp;Cloud<span class="sr-only">(current)</span></a></li>
-					
+                        <li id="auxcloud" onclick="envia('cloud')"><a href="javascript:void(0);"><span style='display:inline;' class='glyphicon glyphicon-cloud'></span>&nbsp;Cloud<span class="sr-only">(current)</span></a></li>
 					</ul>
+                    <ul class="nav navbar-nav navbar-right">
+    					<li class="dropdown">
+    					  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span style='display:inline;' class='fa fa-cog'></span>&nbsp;Config<span class="caret"></span></a>
+    					  <ul class="dropdown-menu">
+                           <li id="auxconfig" onclick='envia("configurar");'><a href="javascript:void(0);"><span style='display:inline;' class='glyphicon glyphicon-user'></span>&nbsp;Mi Perfil</a></li>
+    					   <li id="auxfirma" onclick="envia('firma')"><a href="javascript:void(0);"><span style='display:inline;' class='glyphicon glyphicon-pencil'></span>&nbsp;Firma Electrónica</a></li>
+    					  </ul>
+    					</li>
+    				</ul>
 
 				</div>
 
@@ -110,24 +116,16 @@
                                               <!--<label for="basic-url" style=" color:#000000; text-decoration:none; width:100%;">Totales</label>-->
                                             <table style="margin-top: -20px;width: 100%;font-size: 12px;">
                                               <tr>
-                                                <td style="width: 100px;"><span style="text-align: left;">Sub Total US$:</span></td>
-                                                <td><input type="text" name="subt" id="subt" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
-                                              </tr>
-                                              <tr style="display: none;">
                                                 <td><span style="text-align: left;">Sub Total sin IVA US$:</span></td>
                                                 <td><input type="text" name="subsi" id="subsi" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
-                                              <tr style="display: none;">
+                                              <tr>
                                                 <td><span style=";text-align: left;">Sub Total con IVA US$:</span></td>
                                                 <td><input type="text" name="subci" id="subci" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
                                               <tr>
                                                 <td><span style="text-align: left;">IVA US$:</span></td>
                                                 <td><input type="text" name="iva" id="iva" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;outline:0px;" value="0.00" readonly="readonly"/></td>
-                                              </tr>
-                                              <tr>
-                                                <td><span style="text-align: left;font-size: 14px;"><b>TOTAL US$:</b></span></td>
-                                                <td><input type="text" name="total" id="total" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;font-size: 14px;" value="0.00" readonly="readonly"/></td>
                                               </tr>
                                             </table>
                                         </div>
@@ -223,14 +221,11 @@
                                                     <!--<label for="basic-url" style=" color:#000000; text-decoration:none; width:100%;">Totales</label>-->
         										    <table style="margin-top: -20px;width: 100%;font-size: 12px;">
                                                       <tr>
-                                                        <td style="width: 100px;"><span style="text-align: left;">Sub Total US$:</span></td>
-                                                        <td><input type="text" name="subtxx" id="subtxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
-                                                      </tr>
-                                                      <tr style="display: none;">
                                                         <td><span style="text-align: left;">Sub Total sin IVA US$:</span></td>
                                                         <td><input type="text" name="subsixx" id="subsixx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
+                                                        <td width='10%'></td>
                                                       </tr>
-                                                      <tr style="display: none;">
+                                                      <tr>
                                                         <td><span style=";text-align: left;">Sub Total con IVA US$:</span></td>
                                                         <td><input type="text" name="subcixx" id="subcixx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
@@ -238,7 +233,7 @@
                                                         <td><span style="text-align: left;">IVA US$:</span></td>
                                                         <td><input type="text" name="ivaxx" id="ivaxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;background-color: transparent;border: none;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
-                                                      <tr>
+                                                      <tr style="display: none;">
                                                         <td><span style="text-align: left;font-size: 14px;"><b>TOTAL US$:</b></span></td>
                                                         <td><input type="text" name="totalxx" id="totalxx" class="form-control" style="text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;font-size: 14px;" value="0.00" readonly="readonly"/></td>
                                                       </tr>
@@ -247,6 +242,17 @@
                                               </div>
 
                                      </div>
+                                     <div class="table-responsive" style="border: none;border-color: #FFFFFF;!important;">
+											<table class="table" style="border: none;border-color: #FFFFFF;!important;">
+												<tr>
+												<td width='10%'></td>
+												<td width='40%'></td>
+												<td colspan="2" width='25%' style="text-align: right;vertical-align: middle;font-size: 20px;"><b>TOTAL US$:</b></td>
+                                                      <td width='15%'><input type="text" name="total" id="total" class="form-control input-md" style="height: 35px;text-align: right;width: 100%;display: inline-block;font-weight: bold;background-color: transparent;border: none;font-size: 20px;" readonly="readonly" value="0.00"/></td>
+												<td width='10%'></td>
+												</tr>
+											</table>
+									</div>
                                      <br>
                                      <div class='row'>
       									<div class="col-md-8" >
@@ -444,25 +450,19 @@
         <div class="col-xs-4">
           <br><br>
            <div class='row' id='cuentaactiva' style='display:block;'>
-		<div class='col-lg-12'>
-			<div style='margin-top:10px; margin-bottom:10px;'>Ingresa a tu cuenta PractiPOS en la nube</div>
-			<center><a id="linklogin" href="" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Ir a la nube" /></a></center>
-			<div class='alert alert-success' style='margin-top:20px; margin-bottom:20px;'>Su cuenta se encuentra activa por <b><span id='dias'>x</span></b> dias.</div>
-		</div>
-	  </div>
-	  <div class='row'  id="bloqueo" style="display: block;">
-			<div class="col-lg-12">
-				<h1>Licencia Caducada!</h1>
-				<div class='alert alert-danger' style='margin-top:30px;'>Su cuenta PractiPOS se encuentra bloqueada, ya que se ha terminado la validez de la licencia.</div>
-				<center style='margin-top:20px; margin-bottom:20px;'><a id="linkloginb" href="" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Abrir PractiPOS en la nube" /></a></center>
-			</div>
-	  </div>
-	  <div class='row'>
-		<div class='col-lg-12' style='font-size:14px; color:#404041; display:block;' id='mensajeperso'>
-			PractiPOS 2016
-		</div>
-	  </div>
-
+    		<div class='col-lg-12'>
+    			<div style='margin-top:10px; margin-bottom:10px;'>Ingresa a tu cuenta PractiFactura en la nube</div>
+    			<center><a id="linklogin" href="http://practifactura.com/login.php" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Ir a la nube" /></a></center>
+    			<div class='alert alert-success' style='margin-top:20px; margin-bottom:20px;'>Su cuenta se encuentra activa por <b><span id='dias'></span></b> dias.</div>
+    		</div>
+    	  </div>
+    	  <div class='row'  id="bloqueo" style="display: none;">
+    			<div class="col-lg-12">
+    				<h1>Licencia Caducada!</h1>
+    				<div class='alert alert-danger' style='margin-top:30px;'>Su cuenta PractiFactura se encuentra bloqueada, ya que se ha terminado la validez de la licencia.</div>
+    				<center style='margin-top:20px; margin-bottom:20px;'><a id="linkloginb" href="http://practifactura.com/login.php" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Abrir PractiPOS en la nube" /></a></center>
+    			</div>
+    	  </div>
         </div>
         <div class="col-xs-4"></div>
     </div>
@@ -609,8 +609,29 @@ function envia(donde){
 				$("#configurarfact").hide();
 				$("#firma").hide();
 				$('#cloud').show();
+
+              //***********************licencia*********************
+              $.ajax({
+				  method: "POST",
+				  url: "http://practisis.net/practifactura/api.php",
+				  data: {dedonde: "licencia",empresa: miidempresa }
+			  })
+			  .done(function( msg ) {
+			    var res = msg.split("|");
+					if (res[0]=="block"){
+						$("#cuentaactiva").fadeOut('fast');
+                        $("#bloqueo").fadeIn('slow');
+					}else{
+						$("#bloqueo").fadeOut('fast');
+                        $("#cuentaactiva").fadeIn('slow');
+                        $('#dias').html(res[1]);
+					}
+					console.log(msg);
+			  });
+
 			}else{
-			  $('#auxfacturar').removeClass('active');
+			  $('#auxcloud').removeClass('active');
+              $('#auxfacturar').removeClass('active');
               $('#auxfirma').removeClass('active');
               $('#auxconfig').removeClass('active');
 			  $('#auxhistorial').addClass('active');                         //**********************este corresponde al historial de las facturas*****************************************************//
@@ -738,7 +759,6 @@ function verride(que,quien){
 	}
 
   $(function() {
-
     $( "#fechadesde" ).datepicker({ dateFormat: 'yy-mm-dd' });
   });
 
@@ -934,7 +954,7 @@ if ($(window).width()<=700){
   $("#auxborder").css("height",alto);
   $("#aux1").css("display","none");
   $("#aux2").css("display","none");
-  $("#rayas").css("border-bottom","1px solid #CCCCCC");
+  $("#rayas").css("border-bottom","0px solid #CCCCCC");
 }
 $(window).resize(function() {
   if ($(window).width()<=700){
@@ -955,7 +975,7 @@ $(window).resize(function() {
     $("#auxborder").css("height",alto);
     $("#aux1").css("display","none");
     $("#aux2").css("display","none");
-    $("#rayas").css("border-bottom","1px solid #CCCCCC");
+    $("#rayas").css("border-bottom","0px solid #CCCCCC");
   }
 });
 function consultar(){
@@ -1047,6 +1067,23 @@ function vaciar(){
 }
 
 $(document).ready(function(){
+//***********************licencia*********************
+$.ajax({
+method: "POST",
+url: "http://practisis.net/practifactura/api.php",
+data: {dedonde: "licencia",empresa: miidempresa }
+})
+.done(function( msg ) {
+var res = msg.split("|");
+if (res[0]=="block"){
+  //alert('no entra');
+    setTimeout(function(){ envia('cloud'); }, 500);
+    $(".navbar").fadeOut('slow');
+    return false;
+}else{
+    $(".navbar").fadeIn('slow');
+}
+});
     $.ajax({          //************************ este codigo consulta si el cliente es nuevo*********************
 							  method: "POST",
 							  url: "http://practisis.net/practifactura/api.php",
