--- a/www/run.html
+++ b/www/run.html
@@ -325,12 +325,27 @@
 					<div class="row">
 							<div class="col-md-3" >
 							</div>
-							<div class="col-md-6" style="padding-left:30px; padding-right:30px" >
+							<div class="col-md-6" style="padding-left:30px; padding-right:30px;text-align: center;" >
 								<h3 style='color:#404041'>Configuración</h3>
 								<h4  id="bienvenido"  style='color:#286090  display:block '>Bienvenido. Ingrese todos los datos para su factura Electrónica.</h4>
-								
+
 							</div>
 							<div class="col-md-3" >
+							</div>
+					</div>
+                    <div class="row">
+							<div class="col-md-5" >
+							</div>
+							<div class="col-md-2" style="padding-left:30px; padding-right:30px" >
+								<div class="thumbnail">
+                                  <b><h4 id="vernombreempresa" style="text-align: center;"></h4></b>
+                                  <img id="logoempresa" src="" alt="tu logo" style="width: 150px;">
+                                  <div class="caption">
+                                    <p id="verbdd" style="text-align: center;"></p>
+                                  </div>
+                                </div>
+							</div>
+							<div class="col-md-5" >
 							</div>
 					</div>
 					<div class="row">
@@ -369,12 +384,12 @@
 											<input class="form-control" type="text" name="ruc" id="ruc" placeholder="0000000000000" value="" autocomplete="off">
 										</div>
 									</div>
-									<div class="form-group" style="padding-left:10px; padding-right:10px">
+									<!--<div class="form-group" style="padding-left:10px; padding-right:10px">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="text-align:left; width: 160px;">Logo</span>
 											<input class="form-control" type="text" name="logo" id="logo" placeholder="image.jpg" value="" autocomplete="off">
 										</div>
-									</div>
+									</div>-->
 									<div class="form-group" style="padding-left:10px; padding-right:10px">
 										<div class="input-group" style="width: 100%;">
 											<span class="input-group-addon" id="sizing-addon4" style="text-align:left; width: 160px;">E-mail</span>
@@ -575,6 +590,9 @@ function envia(donde){
 						$("#ruc").val(separafactdi[4]);
 						$("#direccionemp").val(separafactdi[5]);
 						$("#telefonoemp").val(separafactdi[6]);
+                        document.getElementById('logoempresa').src='http://practifactura.com/logos/'+separafactdi[7];
+                        $("#vernombreempresa").html(separafactdi[3]);
+                        $("#verbdd").html(separafactdi[8]);
 					}
 					console.log(msg);
 				});
