--- a/www/run.html
+++ b/www/run.html
@@ -18,6 +18,7 @@
 	<link href="css/formated.css" rel="stylesheet" type="text/css">
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/pdv.js"></script>
+    <script type="text/javascript" charset="utf-8" src="plugins/org.apache.cordova.inappbrowser/www/inappbrowser.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
@@ -434,7 +435,7 @@
            <div class='row' id='cuentaactiva' style='display:block;'>
     		<div class='col-lg-12'>
     			<div style='margin-top:10px; margin-bottom:10px;text-align: center;'>Ingresa a tu cuenta PractiFactura en la nube</div>
-    			<center><a id="linklogin" href="http://practifactura.com/login.php" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Ir a la nube" /></a></center>
+    			<center><a id="linklogin" href="#" onClick="window.open('http://practifactura.com/login.php', '_system', 'location=no');" target="_blank" ><input class="btn btn-md btn-primary btn-center" type="button"  value="Ir a la nube" /></a></center>
     			<div class='alert alert-success' style='margin-top:20px; margin-bottom:20px;text-align: center;'>Su cuenta se encuentra activa por <b><span id='dias'></span></b> dias.</div>
                 <div id="firmano" class='alert alert-danger' style='margin-top:10px; margin-bottom:10px;text-align: center;display: none;'>
                   No tienes registrada tu firma electrónica,
