--- a/www/run.html
+++ b/www/run.html
@@ -321,6 +321,44 @@
 							</div>
 						</div>
 					</div>
+
+                    <div id="myModal" class="modal fade" role="dialog" style="margin-top: 100px;">
+                    <div class="modal-dialog">
+
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title"># de Documento <span id="numeroaux"></span></h4>
+                        </div>
+                        <div class="modal-body">
+                          <div class="panel panel-primary">
+                            <div class="panel-heading">Mensaje</div>
+                            <div class="panel-body">
+                              <div id="msjerror" style="width: 100%;height: 50px;padding: 10px;"></div>
+                            </div>
+                          </div>
+                          <div class="panel panel-primary">
+                            <div class="panel-heading">Reenvío de Email</div>
+                            <div class="panel-body">
+                              <table style="width: 100%;">
+                                <tr>
+                                  <td><b>Email: </b></td>
+                                  <td><input class="form-control" id="emailaux" name="emailaux" type="text"></td>
+                                </tr>
+                              </table>
+                            </div>
+                          </div>
+                          <input id="idfact" name="idfact" type="hidden">
+                          <input id="ambiente" name="ambiente" type="hidden">
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-success" onclick="reeviar();">Enviar</button>
+                        </div>
+                      </div>
+
+                    </div>
+                  </div>
+
 		</div>
 
 
@@ -785,6 +823,7 @@ function verride(que,quien){
 	var telefono=$.trim($("#telefono").val());
 	if (micedula=="" || email =="" || nombre=="" || apellido =="" || telefono =="" ){
 	alert ("Ingrese todos los datos.");
+    $("#fadeCloud").hide();
 	return;
 	}
 	var opcion=0;
@@ -1239,6 +1278,62 @@ if (res[0]=="block"){
     	$('#mybodycontent').css("top","0px");
     }
 });
+function objetoAjax(){
+	var xmlhttp=false;
+	try {
+		xmlhttp = new ActiveXObject("Msxml2.XMLHTTP");
+	} catch (e) {
+		try {
+		   xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+		} catch (E) {
+			xmlhttp = false;
+  		}
+	}
+
+	if (!xmlhttp && typeof XMLHttpRequest!='undefined') {
+		xmlhttp = new XMLHttpRequest();
+	}
+	return xmlhttp;
+}
+function vermas(id,doc,error,ambi){
+  $('#myModal').modal('show');
+  document.getElementById('numeroaux').innerHTML=doc;
+  document.getElementById('msjerror').innerHTML=error;
+  document.getElementById('idfact').value=id;
+  document.getElementById('ambiente').value=ambi;
+}
+function reeviar(){
+  var idf = document.getElementById('idfact').value;
+  var emailaux = document.getElementById('emailaux').value;
+  var ambi = document.getElementById('ambiente').value;
+  var filtro = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+
+  if(!filtro.test(emailaux) || emailaux==''){
+    alert('Email invalido.');
+  }else{
+    var ajaxree=objetoAjax();
+    var linkurl = 'http://practifactura.com/'+ambi+'empresas/reenvio.php';
+      ajaxree.open("POST",linkurl,true);
+      ajaxree.onreadystatechange=function() {
+      if (ajaxree.readyState==4) {
+      	var respp=ajaxree.responseText;
+        //alert(respp);
+        var res = respp.split("|");
+        if(res[0]=='ok'){
+          alert('Reenviado exitosamente.');
+          location.reload(true);
+        }else{
+          alert('Usted ha ingresado un correo que no existe.');
+        }
+
+      }
+      }
+      ajaxree.setRequestHeader("Content-Type","application/x-www-form-urlencoded");
+      ajaxree.send('&f='+idf+'&ema='+emailaux);
+  }
+
+}
 </script>
+holasssssss
   </body>
 </html>
