--- a/www/run.html
+++ b/www/run.html
@@ -490,7 +490,10 @@
                   <br>
                   haz click en sube tu firma.
                   <br><br>
-                  <center><a id="linkfirmano" href="" target="_blank" ><input class="btn btn-md btn-success btn-center" type="button"  value="Sube tu Firma" /></a></center>
+                  <center>
+                  <a id="linkfirmano" href="" target="_blank" ><input class="btn btn-md btn-success btn-center" type="button"  value="Sube tu Firma" /></a>
+                  <a href="#" onclick="window.open('http://www.kidzout.com', '_system');">prueba</a>
+                  </center>
                 </div>
                 <div id="firmasi" class='alert alert-success' style='margin-top:10px; margin-bottom:10px;text-align: center;display: none;'>
                   Para poder cambiar tu firma electrónica,
@@ -767,6 +770,7 @@ function envia(donde){
 				$("#facturas").hide();
 				$("#historial").show();
 				$("#configurarfact").hide();
+                $("#cloud").hide();
 			}
 }
 
